--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-
+# channel
 crossbeam = "0.8.4"
 
 # aruco detection and pose estimation
@@ -20,7 +20,7 @@ nix = { version = "0.29.0", features = ["time"] }
 zune-jpeg = "0.4.11"
 
 # matrix
-nalgebra = "0.33.0"
+nalgebra = {version="0.33.0", features = ["serde", "serde-serialize"]}
 
 # web server
 tokio = { version = "1.0", features = ["full"] }
@@ -34,3 +34,13 @@ serde_json = "1.0"
 burn = "0.13"
 burn-import = "0.13"
 burn-ndarray = { version = "0.13" }
+
+# imu
+mpu6050 = "0.1.6"
+# https://github.com/barafael/mpu6050-dmp-rs.git
+mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp-rs.git" }
+linux-embedded-hal = { version = "0.4", features = ["i2c"] }
+dcmimu = "0.2.2"
+
+# csv
+csv = "1.3.0"
