--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ nix = { version = "0.29.0", features = ["time"] }
 zune-jpeg = "0.4.11"
 
 # matrix
-nalgebra = {version="0.33.0", features = ["serde", "serde-serialize"]}
+nalgebra = { version = "0.33.0", features = ["serde", "serde-serialize"] }
 
 # web server
 tokio = { version = "1.0", features = ["full"] }
@@ -44,3 +44,11 @@ dcmimu = "0.2.2"
 
 # csv
 csv = "1.3.0"
+
+# log
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# spi screen
+ssd1306 = "0.8.4"
+embedded-graphics = "0.8.1"
