--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,12 +35,10 @@ burn = "0.13"
 burn-import = "0.13"
 burn-ndarray = { version = "0.13" }
 
-# imu
+# i2c imu
 mpu6050 = "0.1.6"
-# https://github.com/barafael/mpu6050-dmp-rs.git
 mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp-rs.git" }
 linux-embedded-hal = { version = "0.4", features = ["i2c"] }
-dcmimu = "0.2.2"
 
 # csv
 csv = "1.3.0"
@@ -49,6 +47,6 @@ csv = "1.3.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
-# spi screen
+# i2c screen
 ssd1306 = "0.8.4"
 embedded-graphics = "0.8.1"
