--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ opencv = { version = "0.92.0", features = ["clang-runtime"] }
 v4l = "0.14"
 
 # time
-nix = { version = "0.29.0", features = ["time"] }
+# nix = { version = "0.29.0", features = ["time"] }
 
 # video decoder
 zune-jpeg = "0.4.11"
@@ -29,6 +29,7 @@ tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tungstenite = "0.23.0"
 
 # ai
 burn = "0.13"
@@ -46,10 +47,11 @@ csv = "1.3.0"
 # log
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+# tracing-futures = "0.2.5"
 
 # i2c screen
 ssd1306 = "0.8.4"
 embedded-graphics = "0.8.1"
 
-[profile.release]
-debug = true
+# [profile.release]
+# debug = true
