--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,12 @@ name = "zenoh-server"
 path = "src/zenoh/server.rs"
 
 [[bin]]
+name = "mock-data"
+path = "src/zenoh/mock-data.rs"
+
+[[bin]]
 name = "zenoh-camera"
 path = "src/zenoh/camera.rs"
-
-[profile.release]
-debug = true
 
 [[bin]]
 name = "zenoh-finger"
@@ -71,14 +72,13 @@ linux-embedded-hal = { version = "0.4", features = ["i2c"] }
 # csv
 csv = "1.3.0"
 
-# log
-# tracing = "0.1"
-# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-# tracing-futures = "0.2.5"
-
 # i2c screen
 ssd1306 = "0.8.4"
 embedded-graphics = "0.8.1"
+
+# i2c encoder
+as5600 = "0.8.0"
+rppal = { version = "0.19.0", features = ["hal"] }
 
 # zenoh
 zenoh = "0.11.0"
@@ -88,3 +88,8 @@ clap = { version = "4.5.9", features = ["derive"] }
 
 # can
 socketcan = "3.3.0"
+
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+opt-level = 2
+lto = true
